--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <img src="assets/images/avatar-jessica.jpeg" alt="Jane Does profile picture" class="profile-image">
 
         <section class="profile-info_texts" aria-label="name and residence">
-          <p class="profile-info_name">Jessica Randall</p>
+          <h1 class="profile-info_name">Jessica Randall</h1>
           <p class="profile-info_residence">London, United Kingdom</p>
         </section>
 
