--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
           <p class="profile-info_residence">London, United Kingdom</p>
         </section>
 
-        <p class="profile-about" aria-label="about jane doe">"Frontend developer and avid reader"</p>
+        <p class="profile-about">"Frontend developer and avid reader"</p>
 
-        <ul class="profile-links" aria-label="social links">
+        <ul class="profile-links">
           <li><a href="#">GitHub</a></li>
           <li><a href="#">Frontend Mentor</a></li>
           <li><a href="#">LinkedIn</a></li>
